[package]
name = "rustssi"
version = "0.1.0"
authors = ["mikloist <hectolight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parse_bench"
harness = false