[package]
name = "rustssi"
version = "0.1.0"
authors = ["mikloist <hectolight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.23.0"
strum_macros = "0.23.1"
tokio = { version = "1.11.0", features = ["full"] }
futures = "0.3"
tui = "0.16"
termion = "1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parse_bench"
harness = false

[profile.bench]
debug = true
